--- a/css/style.css
+++ b/css/style.css
@@ -1295,3 +1295,65 @@ html {
     outline: 2px solid black;
 
 }
+.nav {
+    background-color: rgb(255, 0, 0);
+    list-style-type: none;
+    text-align: center;
+    margin: 0;
+    padding: 0;
+}
+
+.nav li {
+    display: inline-block;
+    font-size: 20px;
+    padding: 20px;
+}
+.content {
+    color: yellow;
+    font-size: 20px;
+    list-style-type: none;
+    margin: 0 auto;
+    padding: 30px;
+    min-height: 700px;
+    text-align: center;
+}
+.block {
+
+    width: 300px;
+    margin: 20px;
+    padding: 30px;
+    display: inline-block;
+    text-align: center;
+}
+.i-w {
+    width: 300px;
+    height: 250px;
+}
+
+.block-1 {
+    background-color: brown;
+}
+
+.block-2 {
+    background-color: darkorange;
+}
+
+.block-3 {
+    background-color: darkolivegreen;
+}
+
+.block-4 {
+    background-color: lawngreen;
+}
+
+.block-5 {
+    background-color: darkmagenta;
+}
+
+.block-6 {
+    background-color: rgb(200, 94, 62);
+}
+
+.block-7 {
+    background-color: bisque;
+}
